--- a/app/assets/styles/global/_global.css
+++ b/app/assets/styles/global/_global.css
@@ -1,4 +1,5 @@
 * {
+    /* font-weight:   */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,7 +9,64 @@ html {
     font-size: 16px;
     margin: 0;
     padding: 0;
-    background: blueviolet;
     color: black;
-    font-family: "Roboto";
+    font-family: "Poppins";
+    background-color: #F7F8FA;
+}
+
+body.fixed{
+    height: 100vh;
+    overflow: hidden;
+}
+
+.row{
+    width: 85%;
+    margin: 0 auto;
+}
+
+.link:link, .link:visited{
+    display: block;
+    text-decoration: none;
+    color: #ED1C25;
+    font-size: 1.1rem;
+
+    span{
+        margin-left: 22px;
+        height: 100%;
+        display: inline-flex;
+        align-items: center;
+        vertical-align: middle;
+        margin-bottom: 2px;
+        transition: margin .2s ease-in-out;
+    }
+}
+
+.link:link:hover{
+    span{
+        margin-left: 32px;
+    }
+}
+
+
+.title{
+    font-weight: 300;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding-bottom: 22px;
+    color: #ED1C25;
+    
+    &__sub{
+        font-weight: 600;
+        font-size: 1.2rem;
+        line-height: 2rem;
+        padding-bottom: 26px;
+        color: #333;
+
+        &__smaller{
+            font-family: Roboto, Arial, Helvetica, sans-serif;
+            font-weight: 700;
+            padding: 0;
+            margin: 0;
+        }
+    }
 }
