--- a/app/assets/styles/modules/_home-about.css
+++ b/app/assets/styles/modules/_home-about.css
@@ -1,40 +1,51 @@
-.home-about{
+.home-about {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    &__img{
+    flex-direction: column;
+    &__img {
         box-shadow: 0px 4px 66px rgba(0, 0, 0, 0.17);
         border-radius: 50%;
         width: 95%;
+        margin: 30px 0;
     }
-
-    &__img-container{
-        width: 40%;
+    &__img-container {
+        width: 100%;
         position: relative;
+        padding: 10px 0;
     }
-    
-    &__text{
-        width: 60%;
+    &__text {
+        width: 100%;
         padding-left: 5%;
         position: relative;
-
-        &__bg{
+        &__bg {
             position: absolute;
             left: 0%;
             top: 50%;
             transform: translate(-50%, -50%);
         }
     }
-
-    &__paragraph{
+    &__paragraph {
         font-size: 1.1rem;
         padding-bottom: 16px;
         line-height: normal;
-
     }
-
-    .link:link{
+    .link:link {
         padding-top: 30px;
+    }
+}
+
+@media only screen and (min-width: 520px) {
+    .home-about {
+        flex-direction: row;
+    }
+    .home-about__img-container {
+        width: 40%;
+        margin: 0;
+    }
+    .home-about__text {
+        width: 60%;
+        padding: 0;
+        padding-left: 5%;
     }
 }
