--- a/app/assets/styles/modules/_paper.css
+++ b/app/assets/styles/modules/_paper.css
@@ -1,28 +1,45 @@
-.paper{
-    background: #fff;
-    width: 31.8%;
-    height: 250px;
-    border-top: 4px solid #ED1C25;
-    border-radius: 4px 4px 7px 7px;
-    font-size: 1.3rem;
-    font-weight: 300;
-    padding: 36px 30px 20px 30px;
-    line-height: normal;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    span{
-        color: #ED1C25;
-        font-weight: 600;
-        padding-top: 28px;
-        font-size: 3rem;
-    }
-
-    &__container{
-        display: flex;
-        justify-content: space-between;
-        padding: 80px 0;
-
-    }
-}
+        .paper {
+            background: #fff;
+            width: 100%;
+            height: 185px;
+            border-top: 4px solid #ED1C25;
+            border-radius: 4px 4px 7px 7px;
+            font-size: 1.3rem;
+            font-weight: 300;
+            padding: 36px 30px 20px 30px;
+            line-height: normal;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-bottom: 30px;
+            span {
+                color: #ED1C25;
+                font-weight: 600;
+                padding-top: 28px;
+                font-size: 3rem;
+            }
+            &__container {
+                display: flex;
+                justify-content: space-between;
+                padding: 80px 0;
+                flex-wrap: wrap;
+            }
+        }
+        
+        @media only screen and (min-width: 480px) {
+            .paper {
+                /* height: 250px; */
+                width: 48.5%;
+            }
+        }
+        
+        @media only screen and (min-width: 870px) {
+            .paper {
+                width: 31.8%;
+                margin-bottom: 0;
+                height: 250px;
+            }
+            .paper__container {
+                padding: 40px 0;
+            }
+        }
