--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -11,3 +11,8 @@
 @import 'modules/_stories.css';
 @import 'modules/_testimonials.css';
 @import 'modules/_footer.css';
+@import 'modules/_about.css';
+@import 'modules/_team.css';
+@import 'modules/_board.css';
+@import 'modules/_products.css';
+@import 'modules/_product-call.css';
