--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -1,17 +1,18 @@
-.container{
+.container {
     width: 100%;
-
-    &__gradient{
+    &__padded {
+        padding: 100px 0 150px;
+    }
+    &__gradient {
         background: linear-gradient(180deg, #FFFEFE 0%, rgba(247, 248, 250, 0) 100%);
         padding: 20px 0 60px 0;
     }
-
-    &__moved{
+    &__moved {
         transform: translateY(60px);
     }
-
-    &__white{
+    &__white {
         background: #ffffff;
         padding: 80px 0;
+        width: 100%;
     }
 }
