--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -1,114 +1,176 @@
-.footer{
-
-    &__form{
+.footer {
+    background: url(../../assets/images/f__bg.png);
+    padding-top: 100px;
+    &__form {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: #FFFFFF;
-        box-shadow: 0px 4px 90px rgba(0, 0, 0, 0.05);
+        background: transparent;
+        box-shadow: none;
         border-radius: 60px 7px 60px 7px;
+        flex-direction: column;
     }
-    
-    &__label{
-        font-size: 1.6rem;
+    &__label {
+        font-size: 1.2rem;
         font-weight: 400;
         text-transform: uppercase;
         color: rgba(0, 0, 0, .45);
-        padding: 7px 70px;
+        padding: 20px 70px;
         text-align: center;
+        width: 100%;
         white-space: nowrap;
     }
-
-    &__input{
+    &__input {
         width: 90%;
-        padding: 18px 86px;
+        padding: 18px 50px;
         border-radius: 39px;
-        border: none; 
+        border: none;
         background: linear-gradient(#fff, #fff);
         font-size: 1.1rem;
-
-        &:focus{
+        &:focus {
             outline: none;
         }
-
-        &__icon{
+        &__icon {
             position: absolute;
             left: 9%;
             top: 50%;
             transform: translateY(-50%);
-            width: 30px;
+            width: 22px;
         }
-
-        &__submit{
+        &__submit {
             cursor: pointer;
             position: absolute;
-            right: 55px;
+            right: 7%;
             top: 50%;
             transform: translateY(-50%);
             background: #ED1C25;
-            padding: 10px 50px;
+            padding: 10px 20px;
             border-radius: 60px;
             border: none;
             color: #fff;
         }
-
-        &__container{
+        &__container {
             position: relative;
             background: #ED1C25;
-            border-radius: 0 7px 60px 0;
+            border-radius: 60px 7px 60px 0;
             height: 97px;
-            width: 57%;
+            width: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
     }
-
-    &__container{
-        padding-top: 80px;
+    &__container {
+        padding: 40px 0;
         display: flex;
         justify-content: space-between;
-        
-
-
-        &__title{
+        flex-wrap: wrap;
+        &__title {
             font-size: 1.2rem;
             font-weight: 500;
             text-transform: uppercase;
             color: #ED1C25;
             padding-bottom: 25px;
         }
-
-        &__item{
-            width: 28%;
+        &__item:nth-child(1) {
+            width: 100%;
+            margin-bottom: 36px;
         }
-
-        &__text{
+        &__item:nth-child(2) {
+            width: 50%;
+        }
+        &__item:nth-child(3) {
+            width: 50%;
+        }
+        &__text {
             font-size: 1.1rem;
             font-weight: 400;
             line-height: normal;
             color: #626262;
         }
-
-        &__link:link, &__link:visited{
-            display: block;
+        &__link:link,
+        &__link:visited {
+            display: inline-block;
             text-decoration: none;
             font-size: 1.1rem;
             color: #626262;
             padding-bottom: 22px;
         }
-
-        &__flex{
+        &__flex {
             padding-bottom: 26px;
             display: flex;
             justify-content: flex-start;
             align-items: center;
             color: #626262;
-
-            img{
-                width: 30px;
-                margin-right: 50px;
+            img {
+                width: 22px;
+                margin-right: 30px;
+            }
+            span {
+                line-height: normal;
             }
         }
+    }
+    &__social__icons {
+        padding-top: 28px;
+        img {
+            height: 22px;
+        }
+        a:link,
+        a:visited {
+            text-decoration: none;
+            margin-right: 15px;
+        }
+    }
+    &__bottom {
+        padding: 42px 0;
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .footer__form {
+        flex-direction: row;
+        background: #fff;
+        box-shadow: 0px 4px 90px rgba(0, 0, 0, 0.05);
+    }
+    .footer__input__container {
+        width: 78%;
+        border-radius: 0px 7px 60px 0;
+    }
+    .footer__label {
+        margin-bottom: 34px;
+        padding: 7px 70px;
+        width: 50%;
+    }
+    .footer__input {
+        padding: 18px 86px;
+    }
+    .footer__input__icon {
+        width: 30px;
+    }
+    .footer__container {
+        padding: 80px 0;
+    }
+}
+
+@media only screen and (min-width: 480px) {
+    .footer__input__submit {
+        padding: 10px 50px;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .footer__container__item:nth-child(1) {
+        width: 32%;
+        margin-bottom: 0;
+    }
+    .footer__container__item:nth-child(2) {
+        width: 18%;
+        margin-bottom: 0;
+    }
+    .footer__container__item:nth-child(3) {
+        width: 32%;
+        margin-bottom: 0;
     }
 }
