--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -1,4 +1,4 @@
-.header-content{
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -6,36 +6,41 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
-    &>div{
-        width: 50%;
-
-        &:last-child{
+    &>div {
+        width: 100%;
+        &:last-child {
             text-align: right;
+            display: none;
         }
     }
-
-    &__title{
+    &__title {
         font-size: 4.5rem;
         font-family: 'Playfair Display', serif;
         color: #ED1C25;
         font-style: italic;
         font-weight: 900;
         padding-bottom: 20px;
+        /* white-space: nowrap; */
     }
-
-    &__txt{
+    &__txt {
         font-family: Poppins;
         font-style: italic;
         font-weight: 300;
-        font-size: 28px;
+        font-size: 1.4rem;
         line-height: 150.4%;
         color: #333;
         padding-bottom: 30px;
     }
-
-    &__img{
+    &__img {
         width: 80%;
-        
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .header-content>div:last-child {
+        display: initial;
+    }
+    .header-content>div {
+        width: 50%;
     }
 }
