--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -1,10 +1,9 @@
-.header{
+.header {
     height: 100vh;
     width: 100%;
     background: transparent;
     position: relative;
-
-    &__side-bg{
+    &__side-bg {
         height: 100%;
         width: 15%;
         background: #F5E7E9;
@@ -14,13 +13,16 @@
         display: block;
         z-index: -2;
     }
-
-    &__side-circle{
+    &__side-circle {
         height: 100%;
         top: 50px;
         position: absolute;
         z-index: -4;
-
+        height: 50%;
+        top: 22%;
+        position: absolute;
+        z-index: -4;
     }
-
 }
+
+@media only screen and (min-width:)
