--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,3 +16,8 @@
 @import 'modules/_board.css';
 @import 'modules/_products.css';
 @import 'modules/_product-call.css';
+@import 'modules/_contact.css';
+@import 'modules/_contact-form.css';
+@import 'modules/_mobile-menu.css';
+@import 'modules/_modal.css';
+@import 'modules/_header-slider.css';
