--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -42,7 +42,7 @@
             width: 95%;
         }
         &__img {
-            width: 95%;
+            width: 100%;
             border-radius: 15px;
             transform: translate(-25px, 25px);
             box-shadow: 0px 4px 100px rgba(0, 0, 0, 0.23);
@@ -66,22 +66,6 @@
     }
 }
 
-@media only screen and (min-width: 920px) {
-    .about__text {
-        width: 840;
-    }
-}
-
-@media only screen and (min-width: 820px) {
-    .about__item {
-        width: 50%;
-        padding-right: 7%;
-    }
-    .about__item__pic {
-        width: 50%;
-    }
-}
-
 @media only screen and (min-width: 620px) {
     .about__item {
         width: 60%;
@@ -96,5 +80,21 @@
     }
     .about__item .txt {
         padding-bottom: 0;
+    }
+}
+
+@media only screen and (min-width: 820px) {
+    .about__item {
+        width: 50%;
+        padding-right: 7%;
+    }
+    .about__item__pic {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 920px) {
+    .about__text {
+        width: 840px;
     }
 }
