--- a/app/assets/styles/modules/_board.css
+++ b/app/assets/styles/modules/_board.css
@@ -3,6 +3,7 @@
     align-self: center;
     position: relative;
     width: 90%;
+    margin-bottom: 0;
     &:nth-child(even) {
         align-self: flex-end;
         .board__content {
@@ -14,6 +15,7 @@
     }
     &__section {
         padding: 50px 0;
+        margin-bottom: -120px;
     }
     &__container {
         width: 100%;
@@ -63,14 +65,14 @@
         align-self: flex-start;
     }
     .board__content {
-        width: 130%;
+        width: 105%;
         position: absolute;
         left: 75%;
         top: calc(50% + 22px);
         transform: translateY(-50%);
     }
     .board:nth-child(even) .board__content {
-        left: -105%;
+        left: -88%;
     }
 }
 
@@ -78,8 +80,12 @@
     .board {
         width: 448px;
         padding: 30px 0;
+        margin-bottom: -60px;
     }
     .board__container {
         width: 448px;
+    }
+    .board__section {
+        margin-bottom: 0;
     }
 }
