--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -2,10 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* z-index: -1; */
     &>div {
         width: 100%;
         &:last-child {
