--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -25,4 +25,10 @@
     }
 }
 
-@media only screen and (min-width:)
+@media only screen and (min-width: 550px) {
+    .header__side-circle {
+        height: 100%;
+        top: 50px;
+        z-index: 4;
+    }
+}
