--- a/app/assets/styles/modules/_menu_bar.css
+++ b/app/assets/styles/modules/_menu_bar.css
@@ -1,6 +1,23 @@
 .menu {
     height: 100px;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    background: transparent;
+    left: 0;
+    top: 0;
+    transition: all .3s ease-in-out;
+    z-index: 6;
+    &--up {
+        top: -100px;
+    }
+    &--down {
+        top: 0px;
+        background: #fff;
+        box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
+        &--no-shadow {
+            box-shadow: none;
+        }
+    }
     &__inner {
         height: 100%;
         display: flex;
@@ -8,7 +25,7 @@
         align-items: center;
     }
     &__right-item {
-        display: none;
+        display: flex;
         align-items: center;
         justify-content: flex-end;
     }
@@ -18,7 +35,7 @@
         color: #FF0000;
         margin-left: 60px;
         position: relative;
-        display: inline-block;
+        display: none;
     }
     &__link--active:link,
     &__link--active:visited {
@@ -34,10 +51,73 @@
         top: 9px;
         left: -5px;
     }
+    &-icon {
+        height: 34px;
+        width: 60px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
+        align-items: center;
+        &__line {
+            width: 100%;
+            height: 2.7px;
+            background: #FF0000;
+            border-radius: 150px;
+            transition: all .5s;
+            margin-bottom: 2.5px;
+            &::before {
+                content: "";
+                width: 100%;
+                height: 2.7px;
+                display: block;
+                border-radius: 150px;
+                transform-origin: center;
+                background: #ff0000;
+                position: absolute;
+                top: 0px;
+                transition: all .5s;
+                left: 0;
+            }
+            &::after {
+                content: "";
+                width: 70%;
+                height: 2.7px;
+                display: block;
+                border-radius: 150px;
+                background: #ff0000;
+                position: absolute;
+                bottom: 4px;
+                right: 0;
+                transition: all .5s;
+            }
+        }
+        &--open {
+            .menu-icon__line {
+                width: 0;
+                &::after {
+                    width: 100%;
+                    transform: rotate(-45deg);
+                    top: 10px;
+                    transform-origin: center;
+                }
+                &::before {
+                    width: 100%;
+                    transform: rotate(45deg);
+                    top: 10px;
+                    transform-origin: center;
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (min-width: 1100px) {
-    .menu__right-item {
-        display: flex;
+    .menu__link:link,
+    .menu__link:visited {
+        display: inline-block;
+    }
+    .menu-icon {
+        display: none;
     }
 }
