--- a/app/assets/styles/modules/_product-call.css
+++ b/app/assets/styles/modules/_product-call.css
@@ -2,12 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: column;
     &__text {
-        width: 60%;
         padding-right: 10%;
+        width: 100%;
+        margin-top: 40px;
     }
     &__img-container {
-        width: 40%;
+        width: 100%;
+        order: -1;
         img {
             width: 100%;
         }
@@ -17,6 +20,7 @@
         font-size: 1.3rem;
         padding-bottom: 20px;
         color: rgba(0, 0, 0, .8);
+        width: 100%;
     }
     &__para {
         font-size: 1.3rem;
@@ -34,5 +38,19 @@
         top: 15px;
         left: 0;
         height: 100%;
+    }
+}
+
+@media only screen and (min-width: 730px) {
+    .product-call {
+        flex-direction: row;
+    }
+    .product-call__img-container {
+        width: 40%;
+        order: 2;
+    }
+    .product-call__text {
+        width: 60%;
+        margin-top: 0px;
     }
 }
