--- a/app/assets/styles/modules/_products.css
+++ b/app/assets/styles/modules/_products.css
@@ -1,5 +1,5 @@
 .product {
-    width: 31.5%;
+    width: 100%;
     background: #FFFFFF;
     box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.25);
     text-align: center;
@@ -8,7 +8,7 @@
     overflow: hidden;
     margin-bottom: 40px;
     &--wide {
-        width: 48.5%;
+        width: 100%;
     }
     .link:link,
     .link:visited {
@@ -79,5 +79,20 @@
         &--white {
             background: #FFFFFF;
         }
+    }
+}
+
+@media only screen and (min-width: 820px) {
+    .product {
+        width: 48.5%;
+    }
+    .product--wide {
+        width: 48.5%;
+    }
+}
+
+@media only screen and (min-width: 1320px) {
+    .product {
+        width: 31.5%;
     }
 }
