--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -21,3 +21,4 @@
 @import 'modules/_mobile-menu.css';
 @import 'modules/_modal.css';
 @import 'modules/_header-slider.css';
+@import 'modules/_hero.css';
