--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -9,6 +9,9 @@
             text-align: right;
             display: none;
         }
+        &:first-child {
+            padding-right: 0;
+        }
     }
     &__title {
         font-size: 4.5rem;
@@ -29,7 +32,7 @@
         padding-bottom: 30px;
     }
     &__img {
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -37,7 +40,11 @@
     .header-content>div:last-child {
         display: initial;
     }
-    .header-content>div {
-        width: 50%;
+    .header-content>div:nth-child(1) {
+        width: 60%;
+        padding-right: 4%
+    }
+    .header-content>div:nth-child(2) {
+        width: 40%;
     }
 }
