--- a/app/assets/styles/modules/_home-about.css
+++ b/app/assets/styles/modules/_home-about.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 30px;
     flex-direction: column;
     &__img {
         box-shadow: 0px 4px 66px rgba(0, 0, 0, 0.17);
