--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -21,7 +21,8 @@
         height: 50%;
         top: 22%;
         position: absolute;
-        z-index: -4;
+        z-index: 4;
+        left: 0;
     }
 }
 
