--- a/app/assets/styles/global/_global.css
+++ b/app/assets/styles/global/_global.css
@@ -10,7 +10,7 @@ html {
     margin: 0;
     padding: 0;
     color: black;
-    font-family: "Poppins";
+    font-family: 'Poppins', sans-serif;
     background-color: #F7F8FA;
 }
 
