--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* z-index: -1; */
+    position: relative;
+    z-index: 4;
     &>div {
         width: 100%;
         &:last-child {
@@ -14,17 +15,17 @@
         }
     }
     &__title {
-        font-size: 4.5rem;
-        font-family: 'Playfair Display', serif;
-        color: #ED1C25;
-        font-style: italic;
-        font-weight: 900;
+        font-size: 4rem;
+        letter-spacing: .2rem;
+        color: #154360;
+        font-weight: 700;
         padding-bottom: 20px;
         /* white-space: nowrap; */
+        font-style: italic;
     }
     &__txt {
         font-family: Poppins;
-        font-style: italic;
+        font-style: normal;
         font-weight: 300;
         font-size: 1.4rem;
         line-height: 150.4%;
