--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -35,7 +35,7 @@
 .header-contact {
     .header__slider__inner {
         background: url(../../assets/images/contact-bgg.png);
-        background-position: top right;
+        background-position: top center;
         background-size: cover;
     }
 }
@@ -50,15 +50,33 @@
 
 @media only screen and (min-width: 1100px) {
     .header__slider__inner.first {
-        background: transparent;
+        background: white;
     }
     .header__slider__inner.second {
-        background: transparent;
+        background: white;
     }
     .header__slider__inner.third {
-        background: transparent;
+        background: white;
     }
     .header .header__slider__inner {
-        background: transparent;
+        background: white;
     }
+}
+
+.header__slider__inner.fourth {
+    background: url(../../assets/images/hero-one.png);
+    background-position: top center;
+    background-size: cover;
+}
+
+.header__slider__inner.fifth {
+    background: url(../../assets/images/hero-two.png);
+    background-position: top center;
+    background-size: cover;
+}
+
+.header__slider__inner.sixth {
+    background: url(../../assets/images/hero-three.png);
+    background-position: top center;
+    background-size: cover;
 }
