--- a/app/assets/styles/modules/_paper.css
+++ b/app/assets/styles/modules/_paper.css
@@ -1,45 +1,46 @@
-        .paper {
-            background: #fff;
-            width: 100%;
-            height: 185px;
-            border-top: 4px solid #ED1C25;
-            border-radius: 4px 4px 7px 7px;
-            font-size: 1.3rem;
-            font-weight: 300;
-            padding: 36px 30px 20px 30px;
-            line-height: normal;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            margin-bottom: 30px;
-            span {
-                color: #ED1C25;
-                font-weight: 600;
-                padding-top: 28px;
-                font-size: 3rem;
-            }
-            &__container {
-                display: flex;
-                justify-content: space-between;
-                padding: 80px 0;
-                flex-wrap: wrap;
-            }
-        }
-        
-        @media only screen and (min-width: 480px) {
-            .paper {
-                /* height: 250px; */
-                width: 48.5%;
-            }
-        }
-        
-        @media only screen and (min-width: 870px) {
-            .paper {
-                width: 31.8%;
-                margin-bottom: 0;
-                height: 250px;
-            }
-            .paper__container {
-                padding: 40px 0;
-            }
-        }
+.paper {
+    background: #fff;
+    width: 100%;
+    border-radius: 4px 4px 7px 7px;
+    font-size: 1.3rem;
+    font-weight: 300;
+    padding: 36px 30px 20px 30px;
+    line-height: normal;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-bottom: 30px;
+    position: relative;
+    width: 100%;
+    img {
+        width: 80px;
+        margin-right: 10%;
+    }
+    span {
+        color: #ED1C25;
+        font-weight: 600;
+        font-size: 3rem;
+        display: block;
+    }
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+        padding: 80px 0;
+        flex-wrap: wrap;
+        position: relative;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .paper {
+        width: 48%;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .paper {
+        width: 32%;
+    }
+}
