--- a/app/assets/styles/modules/_stories.css
+++ b/app/assets/styles/modules/_stories.css
@@ -16,10 +16,9 @@
         box-shadow: 0px 4px 39px rgba(0, 0, 0, 0.15);
         &__container {
             width: 92%;
-            background: #ED1C25;
+            background: #154360;
             border-radius: 40px;
             text-align: right;
-            /* position: relative; */
         }
     }
     &__time-stamp {
